[tool.poetry]
name = "akaza_discord_bot"
version = "1.0.6"
description = "Akaza is a Feature-rich Discord Bot, Works for Moderating as well as Entertaining on your Discord Server."
authors = ["K1ngDev <j.armando140208g@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
aiosqlite = "^0.17.0"
discord = "^1.7.3"
colorama = "^0.4.4"
replit = "^3.2.4"
pafy = "^0.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
